@@ -81,3 +81,10 @@ polsturm(x^2-1,[-1,1])
 polrootsreal(x^2-1,[-1,1])
 
 polsturm((x-1)^2*(x+2)*1.)
+
+\\#2112
+pol=-x^4-2*x^3-x^2/3-x/100+1/2000;
+polrootsreal(pol,[1/100,oo])
+
+pol=-x^4-2*x^3-x^2/3-x/100+1/1000;
+polrootsreal(pol,[1/10,oo])     \\ one extra root
